--- a/front/src/App.css
+++ b/front/src/App.css
@@ -1,16 +1,3 @@
-@import '~antd/dist/antd.css';
-
-.ant-layout-sider {
-    /*display: flex;*/
-    /*justify-content: center;*/
-    /*align-items: center;*/
-    background-color: #092d4e;
-}
-
-.ant-layout-content {
-    height: 100%;
-}
-
 body {
     margin: 0;
     font-family: 'Montserrat', sans-serif;
@@ -28,3 +15,8 @@ h1, h2, h3, h4, h5, h6, p {
     padding: 0;
 }
 
+.container {
+    max-width: 1000px;
+    margin: 0 auto;
+    border: 2px solid black;
+}
