--- a/front/src/App.css
+++ b/front/src/App.css
@@ -20,3 +20,8 @@ h1, h2, h3, h4, h5, h6, p {
     margin: 0 auto;
     border: 2px solid black;
 }
+
+.main {
+    max-width: 900px;
+    margin: 0 auto;
+}
