--- a/front/src/Components/Header/header.scss
+++ b/front/src/Components/Header/header.scss
@@ -30,7 +30,29 @@
     &__link.active {
       background-color: #71c1ea;
     }
-
   }
+}
+
+@media (max-width: 630px) {
+  .header {
+    padding: 10px;
+    &__logo {
+      font-size: 20px;
+    }
+
+    &__nav {
+      column-gap: 10px;
+    }
+
+    .nav {
+      &__link {
+    font-size: 16px;
+      }
+    }
+  }
+
+
+
+
 }
 
