--- a/front/src/App.css
+++ b/front/src/App.css
@@ -1,6 +1,8 @@
 body {
     margin: 0;
+    padding: 10px;
     font-family: 'Montserrat', sans-serif;
+    background-color: #949494;
 }
 
 
@@ -18,7 +20,6 @@ h1, h2, h3, h4, h5, h6, p {
 .container {
     max-width: 1000px;
     margin: 0 auto;
-    border: 2px solid black;
 }
 
 .main {
