--- a/front/src/Components/Header/header.scss
+++ b/front/src/Components/Header/header.scss
@@ -3,7 +3,9 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-
+  margin: 20px 0;
+  background-color: #fff;
+  border-radius: 5px;
   &__logo {
     font-size: 30px;
     font-weight: 700;
