--- a/front/src/App.css
+++ b/front/src/App.css
@@ -26,3 +26,7 @@ h1, h2, h3, h4, h5, h6, p {
     max-width: 900px;
     margin: 0 auto;
 }
+
+button, input, textarea {
+    font-family: 'Montserrat', sans-serif;
+}
