--- a/front/src/Components/Books/books.scss
+++ b/front/src/Components/Books/books.scss
@@ -2,7 +2,7 @@
   border: 1px solid #eee;
   table-layout: fixed;
   width: 100%;
-  margin-bottom: 20px;
+  margin: 20px 0;
   border-radius: 5px;
 
   th {
@@ -58,6 +58,59 @@
   }
 }
 
+.button {
+  padding: 5px 10px;
+  font-weight: 700;
+  color: black;
+  border: none;
+  background-color: #fff;
+  border-radius: 2px;
+  cursor: pointer;
+  font-size: 14px;
+  transition: .25s all ease-in-out;
+
+  &:hover {
+    background-color: #676262;
+    color: white;
+  }
+}
+
+.form {
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  row-gap: 15px;
+  background-color: #e0dddd;
+  padding: 15px;
+
+  label {
+    color: black;
+  }
+
+  input {
+    display: block;
+    padding: 10px;
+    border: none;
+    width: 300px;
+    margin-top: 5px;
+    &:focus {
+      outline: none;
+    }
+  }
+
+  .button {
+    margin-top: 10px;
+    width: 300px;
+    background-color: #676262;
+    color: white;
+
+    &:hover {
+      background-color: white;
+      color: #676262;
+    }
+  }
+}
+
 @media (max-width: 650px) {
   .table {
     font-size: 14px;
@@ -70,3 +123,4 @@
     }
   }
 }
+
