--- a/front/src/App.scss
+++ b/front/src/App.scss
@@ -36,6 +36,6 @@ h1, h2, h3, h4, h5, h6, p {
 }
 
 
-button, input, textarea {
+button, input, textarea, select, option {
   font-family: 'Montserrat', sans-serif;
 }
